# yesod-auth-oidc

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  default.nix  makefile  shell.nix  yesod-auth-oidc.cabal
nix/: nixpkgs.nix  pkgconfig.nix
src/Yesod/Auth/: OIDC.hs
test/: ExampleApp.hs  ExampleProvider.hs  ExampleProviderOpts.hs  Main.hs  TestImport.hs
test/Yesod/Auth/: OIDCSpec.hs
